前后端贯通，普通用户基本功能

--- a/src/css/bookdetail.css
+++ b/src/css/bookdetail.css
@@ -14,7 +14,7 @@
 .book-container .book .book-info {
     padding-bottom: 10px;
 }
-.autoImg {
+.book-details-img .autoImg {
     width: 100%;
     height: auto;
 }
