--- a/src/css/order.css
+++ b/src/css/order.css
@@ -42,6 +42,18 @@
     font-weight: bold;
 }
 
+.site-drawer-render-in-current-wrapper {
+    position: relative;
+    height: 200px;
+    width: 100%;
+    padding: 20px;
+    overflow: hidden;
+    text-align: left;
+    background: #fafafa;
+    border: 1px solid #ebedf0;
+    border-radius: 2px;
+}
+
 /*.order-form {*/
 /*    display: table;*/
 /*    padding: 10px;*/
